# Generated by Django 5.2.4 on 2026-06-23 02:52

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('auth', '0012_alter_user_first_name_max_length'),
    ]

    operations = [
        migrations.CreateModel(
            name='VisitPlaceType',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=30, unique=True)),
            ],
        ),
        migrations.CreateModel(
            name='User',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('password', models.CharField(max_length=128, verbose_name='password')),
                ('last_login', models.DateTimeField(blank=True, null=True, verbose_name='last login')),
                ('is_superuser', models.BooleanField(default=False, help_text='Designates that this user has all permissions without explicitly assigning them.', verbose_name='superuser status')),
                ('social_provider', models.CharField(choices=[('kakao', '카카오'), ('google', '구글')], max_length=10)),
                ('social_id', models.CharField(max_length=64, unique=True)),
                ('email', models.EmailField(blank=True, max_length=254, null=True)),
                ('nickname', models.CharField(blank=True, max_length=50, null=True)),
                ('profile_image_url', models.URLField(blank=True, null=True)),
                ('gender', models.CharField(blank=True, choices=[('male', '남성'), ('female', '여성')], max_length=10, null=True)),
                ('age_range', models.CharField(blank=True, max_length=20, null=True)),
                ('is_active', models.BooleanField(default=True)),
                ('is_staff', models.BooleanField(default=False)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('groups', models.ManyToManyField(blank=True, help_text='The groups this user belongs to. A user will get all permissions granted to each of their groups.', related_name='user_set', related_query_name='user', to='auth.group', verbose_name='groups')),
                ('user_permissions', models.ManyToManyField(blank=True, help_text='Specific permissions for this user.', related_name='user_set', related_query_name='user', to='auth.permission', verbose_name='user permissions')),
            ],
            options={
                'abstract': False,
            },
        ),
        migrations.CreateModel(
            name='UserPreference',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('hygiene_sensitivity', models.PositiveSmallIntegerField()),
                ('preparedness', models.PositiveSmallIntegerField()),
                ('heat_tolerance', models.PositiveSmallIntegerField()),
                ('cold_tolerance', models.PositiveSmallIntegerField()),
                ('korean_food_need', models.PositiveSmallIntegerField()),
                ('user', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, related_name='preference', to=settings.AUTH_USER_MODEL)),
            ],
        ),
        migrations.CreateModel(
            name='TravelStyle',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('movement_type', models.CharField(choices=[('walker', '워킹맨'), ('moderate', '적당히'), ('minimal', '걷는거 최소')], max_length=12)),
                ('consumption_type', models.CharField(choices=[('souvenir', '기념품'), ('value', '가성비'), ('premium', '가심비')], max_length=12)),
                ('planning_type', models.CharField(choices=[('spontaneous', '즉흥적'), ('planned', '계획적')], max_length=12)),
                ('preference', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, related_name='travel_style', to='accounts.userpreference')),
                ('visit_place_types', models.ManyToManyField(blank=True, to='accounts.visitplacetype')),
            ],
        ),
    ]
