erDiagram
  USER ||--|| USER_PREFERENCE : "취향(1:1)"
  USER_PREFERENCE ||--|| TRAVEL_STYLE : "관광스타일 포함(1:1)"
  TRAVEL_STYLE }o--o{ VISIT_PLACE_TYPE : "방문장소유형(M:N)"
  USER ||--o{ TRIP : plans
  TRIP ||--o{ RECOMMENDATION : produces
  RECOMMENDATION ||--o{ RECOMMENDATION_ITEM : contains
  ITEM ||--o{ RECOMMENDATION_ITEM : "appears in"
  ITEM }o--o{ TRAVEL_TAG : "태그 매핑(M:N)"
  COUNTRY ||--o{ CITY : has
  TRIP }o--|| COUNTRY : targets
  TRIP }o--|| CITY : targets
  COUNTRY ||--|| COUNTRY_HEALTH : "건강(국가)"
  CITY ||--|| CITY_SAFETY : "치안(도시)"
  COUNTRY ||--o{ CULTURAL_TIP : "문화팁(국가)"
  CITY }o--o{ TRAVEL_TAG : tagged

  USER {
    bigint id PK
    string social_provider "kakao/google"
    string social_id "UNIQUE with provider"
    string email "NULL"
    string nickname "NULL"
    string gender "NULL"
    string age_range "NULL"
    datetime created_at
  }
  USER_PREFERENCE {
    int id PK
    int user_id FK
    int hygiene_sensitivity "위생 1-5"
    int preparedness "상황대비 1-5"
    int heat_tolerance "더위 1-5"
    int cold_tolerance "추위 1-5"
    int korean_food_need "한식 1-5"
  }
  TRAVEL_STYLE {
    int id PK
    int preference_id FK
    string movement_type
    string consumption_type
    string planning_type
  }
  VISIT_PLACE_TYPE {
    int id PK
    string name
  }
  TRIP {
    int id PK
    int user_id FK
    int country_id FK
    int city_id FK
    string companion_type
    int companion_count
    date start_date
    date end_date
    bool local_language_ok
    string accommodation_type
  }
  RECOMMENDATION {
    int id PK
    int trip_id FK
    json notes
    datetime created_at
  }
  RECOMMENDATION_ITEM {
    int id PK
    int recommendation_id FK
    int item_id FK
    string priority "필수/권장/선택"
    string reason "챙겨야 하는 근거"
  }
  ITEM {
    int id PK
    string name
    string default_tip "준비 이유/팁"
  }
  TRAVEL_TAG {
    int id PK
    string tag_name
    string class "성향/테마/환경/지역/스타일"
  }
  COUNTRY {
    int id PK
    string name
    string voltage
    string plug_type
    bool adapter_needed
  }
  CITY {
    int id PK
    int country_id FK
    string name
  }
  COUNTRY_HEALTH {
    int id PK
    int country_id FK
    bool tap_water_drinkable
    bool shower_filter_required
    bool yellow_fever_cert_required
    json essential_vaccines "목적지 필수 백신만"
    string vaccine_note
  }
  CITY_SAFETY {
    int id PK
    int city_id FK
    float crime_index "Numbeo"
    float safe_alone_day "Numbeo"
    float safe_alone_night "Numbeo"
    string emergency_contact "경찰/구급/관할공관/영사콜센터"
  }
  CULTURAL_TIP {
    int id PK
    int country_id FK
    string theme "식사예절/온천/교통 등"
    string content
  }
